--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-Hi
+<!DOCTYPE html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		
+		<title>Throw Platform</title>
+		
+		<meta name="description" content="Throw Platform is a learning tool to engage students in learning more about computer science">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/bootstrap-responsive.css">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
+	
+	<body>
+	
+		<!--[if lt IE 7]>
+			<p class="alert">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/">activate Google Chrome Frame</a> to improve your experience.</p>
+		<![endif]-->
+		
+		<header>
+			<div class="navbar navbar-inverse">
+				<div class="navbar-inner navbar-fixed-top">
+					<a class="brand" href="#">Throw Platform</a>
+					<ul class="nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="getting-started.html">Getting Started</a></li>
+						<li><a href="tutorial.html" class="active">Tutorial</a></li>
+						<li><a href="showcase.html">Showcase</a></li>
+					</ul>
+			</div>
+		</header>
+		
+		<div class="row-fluid">
+			<div class="box span6 grav">
+				<div class="box-inner"><h1>About</h1></div>
+			</div>
+			<div class="box span6 grav"><div class="box-inner"><h1>Getting Started</h1></div></div>
+		</div>
+		<div class="row-fluid">
+			<div class="box span6 grav"><div class="box-inner"><h1>Tutorial</h1></div></div>
+			<div class="box span6 grav"><div class="box-inner"><h1>Showcase</h1></div></div>
+		</div>
+<!--
+		<div class="one shape grav">
+			<div class="shape-inner">Getting Started</div>
+		</div>
+		<div class="two shape grav">
+			<div class="shape-inner">Tutorial</div>
+		</div>
+		<div class="three shape grav">
+			<div class="shape-inner">Showcase</div>
+		</div>-->
+		<div class="env">
+			<div class="random-shape grav"></div>
+		</div><!--
+		<div class="pOne solid"></div>
+		<div class="pWall solid"></div>
+		<div class="pTwo solid" id="high"></div>
+		<div class="pTwo-WallOne solid"></div>
+		<div class="pTwo-WallTwo solid"></div>
+		<div class="pThree solid" id="low"></div>
+		<div class="pThree-wallOne solid"></div>
+		<div class="pThree-wallTwo solid"></div>
+		<div class="scoreboard"></div>-->
+		<footer>
+			<script src="js/jquery-1.7.min.js"></script>
+			<script src="js/bootstrap.js"></script>
+			<script src="js/main.js"></script>
+			<script src="js/jquery.main.js"></script>
+			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
+			<!--<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>-->
+		</footer>
+		
+	</body>
+</html>
