removed dots and added links

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 		
 		<div class="row-fluid">
 			<div class="box span6 grav">
-				<div class="box-inner"><h1>About</h1></div>
+				<div class="box-inner"><h1><a href="about.html">About</a></h1></div>
 			</div>
-			<div class="box span6 grav"><div class="box-inner"><h1>Getting Started</h1></div></div>
+			<div class="box span6 grav"><div class="box-inner"><h1><a href="getting-started.html">Getting Started</a></h1></div></div>
 		</div>
 		<div class="row-fluid">
-			<div class="box span6 grav"><div class="box-inner"><h1>Tutorial</h1></div></div>
-			<div class="box span6 grav"><div class="box-inner"><h1>Showcase</h1></div></div>
+			<div class="box span6 grav"><div class="box-inner"><h1><a href="tutorial.html" >Tutorial</a></h1></div></div>
+			<div class="box span6 grav"><div class="box-inner"><h1><a href="showcase.html">Showcase</a></h1></div></div>
 		</div>
 <!--
 		<div class="one shape grav">
@@ -53,10 +53,12 @@
 		</div>
 		<div class="three shape grav">
 			<div class="shape-inner">Showcase</div>
-		</div>-->
+		</div>
 		<div class="env">
 			<div class="random-shape grav"></div>
-		</div><!--
+		</div>
+		-->
+		<!--
 		<div class="pOne solid"></div>
 		<div class="pWall solid"></div>
 		<div class="pTwo solid" id="high"></div>
@@ -71,8 +73,7 @@
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
-			<!--<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>-->
+			<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 		</footer>
 		
 	</body>
