--- a/grav.html
+++ b/grav.html
@@ -77,14 +77,20 @@
 					<h3>Input</h3>
 					<form>
 						<textarea id="codeTextarea" style="width: 100%; height: 100%;">
-<!DOCTYPE html>
-<html>
-	<header>
-	</header>
-		<body>
-			<div class="grav" style="top:200px;left:400px; background: black; width: 50px; height: 50px;">1</div>
-		</body>
-</html>
+
+<span class="hello" style="background-color:yellow; height:100px; width:100px; font-size:30pt;">HELLO</span>
+
+<span class="grav" style="background-color:orange; height:100px; width:100px; font-size:30pt;">GRAV</span>
+
+
+
+
+
+
+
+
+
+
 
 						</textarea>
 					</form>
