--- a/tutorial.html
+++ b/tutorial.html
@@ -57,18 +57,9 @@
 			
 			<div class="row-fluid span5 tutorial-wrapper">
 				<div class="tutorial-content">
-					<h1>Gravity Identifier<small> how do we use it?</small></h1>
-					<p>There are a few important things to keep in mind when it comes to bringing your project to life.  In order to get our code working we need to use identifiers that will attach to objects in your HTML document.  We have provided you with a few identifiers, each with unique attributes, to get you started.  The first, and most important, is our gravity tag.</p>
+					<h1>Select a section to get going!<br><small>&lt;-- to the left</small></h1>
 
-						<p>Inspect the input code we have provided you on the right side of the screen and see if you can pinpoint how the gravity tag has been attached to the different objects.  You've most likely noticed that we used a value called <code data-language="html">class="grav"</code> on each of the elements that are now slave to our gravity enviornment!  This tag is the only way in which our objects can have the specific attributes attached to <code data-language="html">grav</code>.</p>
-
-						<p>The <code data-language="html">class="grav"</code> needs to be put inside the <brackets/> of our HTML object.</p>
-							
-							<strong class="alert-danger">BAD!</strong>
-							<pre><code data-language="html">&lt;span style="top:200px;left:400px; background: black"&gt class="grav"&lt;/span&gt</code></pre>
-							<strong class="alert-success">GOOD!</strong>
-							<pre><code data-language="html">&lt;span  class="grav" style="top:200px;left:400px;background:black"&gt&lt;/span&gt</code></pre>
-						<p>Give it a try on the code provided on the right side of the screen. Remember, if you reload the page all work will be lost. :(</p>
+						
 				</div>
 			</div>
 			
@@ -76,17 +67,35 @@
 				<div class="frame">
 					<h3>Input</h3>
 					<form>
-						<textarea id="codeTextarea" style="width: 100%; height: 100%;">
-<!DOCTYPE html>
-<html>
-	<header>
-	</header>
-		<body>
-			<div class="grav" style="top:200px;left:400px; background: black; width: 50px; height: 50px;">1</div>
-		</body>
-</html>
+<textarea id="codeTextarea" style="width: 100%; height: 100%;">
+<center>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">T</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">H</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">R</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">O</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">W</span>
+</center>
 
-						</textarea>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</textarea>
 					</form>
 				</div>
 				<div class="output">
