--- a/tutorial.html
+++ b/tutorial.html
@@ -44,7 +44,7 @@
 				<div class="navbar-left">
 					<ul class="nav nav-list">
 						<li class="nav-header">Navigate</li>
-						<li class="active"><a href="grav.html"><i class="icon-globe icon-white"></i> Grav Tag</a></li>
+						<li><a href="grav.html"><i class="icon-globe"></i> Grav Tag</a></li>
 						<li><a href="solid.html"><a href="solid.html"><i class="icon-th"></i> Solid Tag</a></li>
 						<li><a href="align.html"><i class=" icon-arrow-up"></i>Alignment</a></li>
 						<li><a href="impact.html"><i class="icon-resize-small"></i> Impact</a></li>
