--- a/impact.html
+++ b/impact.html
@@ -80,34 +80,24 @@ function impact(object1, object2){
 				<div class="frame">
 					<h3>Input</h3>
 					<form>
-						<textarea id="codeTextarea" style="width: 100%; height: 100%;">
+					<img style="width:150px" src="img/const.jpg"/>
+						<!--  <textarea id="codeTextarea" style="width: 100%; height: 100%;">
 <script type="text/javascript">
 function impact(object1, object2){
 
+object1.innerHTML = parseInt(object1.innerHTML) +1
+	
 }
 </script>
 
-<style>
-.block{
-	width: 50px;
-	height: 50px;
-}
 
-.output{
-	float: left;
-	width: 200px;
-	height: 50px;
-	background: blue;
-	color: white;
-}
-</style>
-<div class="grav block solid" style="background: black;" id="black"></div>
-<div class="grav block solid" style="background: blue;" id="blue"></div>
-<div class="grav block solid" style="background: red;" id="red"></div>
-<div class="grav block solid" style="background: yellow;" id="yellow"></div>
-<div class="output"> </div>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">0</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">0</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">0</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">0</span>
+<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">0</span>
 
-						</textarea>
+</textarea>-->
 					</form>
 				</div>
 				<div class="output">
@@ -129,7 +119,7 @@ function impact(object1, object2){
 			var old = '';
 
 			function init() {
-				update();
+				//update();
 			}
 
 			function update() {
