--- a/test.htm
+++ b/test.htm
@@ -9,7 +9,7 @@ Released under the GPLv3 License
 -->
 <html>
 <head>
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
+<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>Throw! (The Game Platform)</title>
 </head>
@@ -58,7 +58,7 @@ function impact(object1, object2){
 <span id="R" class="grav" style="background-color:red; height:100px; width:100px; font-size:80pt;">R</span>
 <span id="O" class="grav" style="background-color:red; height:100px; width:100px; font-size:80pt;">O</span>
 <span id="W" class="grav" style="background-color:red; height:100px; width:100px; font-size:80pt;">W</span>
-<span id="TARGET"  style="background-color:red; height:100px; width:430px; font-size:80pt;position:absolute; bottom:5px;">TARGET</span>
+<span id="TARGET" class="grav"  style="background-color:red; height:100px; width:430px; font-size:80pt;position:absolute; bottom:5px;">TARGET</span>
 </center>
 
 
