--- a/grav.html
+++ b/grav.html
@@ -27,7 +27,7 @@
 		<header>
 			<div class="navbar navbar-inverse">
 				<div class="navbar-inner navbar-fixed-top">
-					<a class="brand" href="#">Throw Platform</a>
+					<a class="brand" href="index.html">Throw Platform</a>
 					<ul class="nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
