--- a/impact.html
+++ b/impact.html
@@ -152,7 +152,21 @@ object2.innerHTML = parseInt(object2.innerHTML) +1
 				window.setTimeout(update, 150);
 			}
 		</script>
-
+	
+		<script type="text/javascript">
+		
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-39145283-1']);
+		_gaq.push(['_trackPageview']);
+		
+		(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+		
+		</script>
+	
 	</footer>
 		
 	</body>
