--- a/extra.html
+++ b/extra.html
@@ -67,7 +67,12 @@
 					<h3>Input</h3>
 					<form>
 						<textarea id="codeTextarea" style="width: 100%; height: 100%;">
-							<div class="grav">asdfasdfas</div>
+<div class="grav">asdfasdfas</div>
+
+<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+
+
+
 						</textarea>
 					</form>
 				</div>
