--- a/tutorial.html
+++ b/tutorial.html
@@ -69,14 +69,14 @@
 					<form>
 <textarea id="codeTextarea" style="width: 100%; height: 100%;">
 <center>
-<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">T</span>
-<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">H</span>
-<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">R</span>
-<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">O</span>
-<span class="grav" style="background-color:red; height:100px; width:100px; font-size:30pt;">W</span>
+<span class="grav" style="background-color:red; font-size:30pt;">T</span>
+<span class="grav" style="background-color:red; font-size:30pt;">H</span>
+<span class="grav" style="background-color:red; font-size:30pt;">R</span>
+<span class="grav" style="background-color:red; font-size:30pt;">O</span>
+<span class="grav" style="background-color:red; font-size:30pt;">W</span>
 </center>
 
-
+<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 
 
 
