added warning about being a new project

--- a/align.html
+++ b/align.html
@@ -57,6 +57,14 @@
 			
 			<div class="row-fluid span5 tutorial-wrapper">
 				<div class="tutorial-content">
+				
+				<div class="alert alert-block">
+				This is a new project. Please let us know if something is not clear
+				so we can fix it. Your comments will help us greatly!
+				<br>
+				-Joseph Paul Cohen (joecohen/at/ieee.org)
+				</div>
+				
 					<h1>Left/Top Alignment<small> how do we use it?</small></h1>
 					<p></p>
 					<p>Understanding how to align your divs you need to have a basic understanding of CSS (Cascading Style Sheets).  Without CSS, HTML would would have no aesthetic.  CSS allows us to bring out HTML to life by adding specific properties to each of our divs.</p>
