--- a/extra.html
+++ b/extra.html
@@ -57,6 +57,14 @@
 			
 			<div class="row-fluid span5 tutorial-wrapper">
 				<div class="tutorial-content">
+				
+				<div class="alert alert-block">
+				This is a new project. Please let us know if something is not clear
+				so we can fix it. Your comments will help us greatly!
+				<br>
+				-Joseph Paul Cohen (joecohen/at/ieee.org)
+				</div>
+				
 					<h1>Extras<small> things to get you started</small></h1>
 					<p></p>
 				</div>
