--- a/grav.html
+++ b/grav.html
@@ -143,6 +143,7 @@
 					      ,id:"contentFrame"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
+					$("#outputframe").text('');
 				 	iframe.appendTo("#outputframe");
 					
 				 	//get the raw element so we can append scripts
