--- a/impact.html
+++ b/impact.html
@@ -147,6 +147,7 @@ object2.innerHTML = parseInt(object2.innerHTML) +1
 					      ,id:"contentFrame"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
+					$("#outputframe").text('');
 				 	iframe.appendTo("#outputframe");
 					
 				 	//get the raw element so we can append scripts
