added contact and license

--- a/about.html
+++ b/about.html
@@ -35,6 +35,30 @@
 			</div>
 		</header>
 		<div class="container white-background">
+		
+		<h1>Contact</h1>
+		
+		<div class="#">
+		<p>The Throw Platform is created and supported by Joseph Paul Cohen
+		<br>
+		Email: joecohen /at/ ieee.org
+		<br>
+		Website: <a href="http://josephpcohen.com">http://josephpcohen.com</a>
+		</p>
+		</div>
+		
+		<h1>License</h1>
+		
+		<div class="#">
+		
+		<p>
+		The Throw platform is released under a GPLv3 license for non-commercial use. 
+		Contact us for any questions.
+		</p>
+		
+		</div>
+		
+		
 			<h1>Publications</h1>
 				<div class="#">
 				<p><strong>2013, To Introduce Computer Science in One Day, The Throw Platform</strong><br/>
