changed image sizes for showcase

--- a/showcase.html
+++ b/showcase.html
@@ -41,13 +41,13 @@
 			<div class="thumbnails-container white-background">
 			<h1>Showcase<small> see what people have done!</small></h1>
 			<ul class="thumbnails">
-				<li class="span4"><a href="http://medhanitgrace.github.com/throw-cellphone.htm" class="thumbnail"><img src="img/1.png" alt=""></a></li>
-				<li class="span4"><a href="http://nessaxo.github.com/throw-cellphone.htm" class="thumbnail"><img src="img/2.png" alt=""></a></li>
-				<li class="span4"><a href="http://j3nniferandn1ki.github.com/throw-cellphone.htm" class="thumbnail"><img src="img/3.png" alt=""></a></li>
-				<li class="span4"><a href="http://rachelobrien.github.com/throw-cellphone.htm" class="thumbnail"><img src="img/4.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-money.htm" class="thumbnail"><img src="img/5.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-basket.htm" class="thumbnail"><img src="img/6.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-cellphone.htm" class="thumbnail"><img src="img/7.png" alt=""></a></li>
+				<li class="span4"><a href="http://medhanitgrace.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://nessaxo.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://j3nniferandn1ki.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://rachelobrien.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
 			</ul>
 			</div>
 
