--- a/showcase.html
+++ b/showcase.html
@@ -45,9 +45,9 @@
 				<li class="span4"><a href="http://nessaxo.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://j3nniferandn1ki.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://rachelobrien.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-platform.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
 			</ul>
 			</div>
 
