--- a/showcase.html
+++ b/showcase.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,68 +9,62 @@
 		<meta name="description" content="Throw Platform is a learning tool to engage students in learning more about computer science">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/main.css">
-		
-		
-		
-		
 	</head>
 	
-	<body onload="init();">
-	
-		<!--[if lt IE 7]>
-			<p class="alert">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/">activate Google Chrome Frame</a> to improve your experience.</p>
-		<![endif]-->
-		
+	<body>
 		<header>
 			<div class="navbar navbar-inverse">
 				<div class="navbar-inner navbar-fixed-top">
-					<a class="brand" href="index.html">Throw Platform</a>
-					<ul class="nav">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="getting-started.html">Getting Started</a></li>
-						<li><a href="tutorial.html">Tutorial</a></li>
-						<li><a href="showcase.html" class="active">Showcase</a></li>
-					</ul>
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </a>
+			      <!-- Be sure to leave the brand out there if you want it shown -->
+			      <a class="brand" href="index.html">Throw Platform</a>
+			 
+			      <!-- Everything you want hidden at 940px or less, place within here -->
+			      <div class="nav-collapse collapse">
+			       		<ul class="nav">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="getting-started.html">Create</a></li>
+							<li><a href="basics.html" class="active">Tutorial</a></li>
+							<li class="active"><a href="showcase.html">Showcase</a></li>
+						</ul>
+			      </div>
+					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
+						<div class="feedback"><i class="icon-envelope icon-white"></i> Send us feedback!</div>
+					</a>				
 				</div>
 			</div>
+			<section class="heading-showcase">
+				<div class="container-fluid">
+					<h1>Showcase</h1>
+				</div>
+			</section>
 		</header>
-			<div class="thumbnails-container white-background">
-			<h1>Showcase<small> see what people have done!</small></h1>
+		<article class="container">
+
 			<ul class="thumbnails">
 				<li class="span4"><a href="http://medhanitgrace.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://nessaxo.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://j3nniferandn1ki.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://rachelobrien.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.com/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
+				<li class="span4"><a href="http://throw-platform.github.com/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
 			</ul>
-			</div>
-
+		</article>
 		<footer>
 			<script src="js/jquery-1.7.min.js"></script>
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<script type="text/javascript">
-			
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-39145283-1']);
-			_gaq.push(['_trackPageview']);
-			
-			(function() {
-			  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-			
-			</script>
-	</footer>
-		
+		</footer>
 	</body>
 </html>
