--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,100 +9,76 @@
 		<meta name="description" content="Throw Platform is a learning tool to engage students in learning more about computer science">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	
 	<body>
-	
-		<!--[if lt IE 7]>
-			<p class="alert">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/">activate Google Chrome Frame</a> to improve your experience.</p>
-		<![endif]-->
-		
 		<header>
 			<div class="navbar navbar-inverse">
 				<div class="navbar-inner navbar-fixed-top">
-					<a class="brand" href="index.html">Throw Platform</a>
-					<ul class="nav">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="getting-started.html">Getting Started</a></li>
-						<li><a href="tutorial.html" class="active">Tutorial</a></li>
-						<li><a href="showcase.html">Showcase</a></li>
-					</ul>
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </a>
+			      <!-- Be sure to leave the brand out there if you want it shown -->
+			      <a class="brand" href="index.html">Throw Platform</a>
+			 
+			      <!-- Everything you want hidden at 940px or less, place within here -->
+			      <div class="nav-collapse collapse">
+			       		<ul class="nav">
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="about.html">About</a></li>
+							<li><a href="getting-started.html">Create</a></li>
+							<li><a href="grav.html" class="active">Tutorial</a></li>
+							<li><a href="showcase.html">Showcase</a></li>
+						</ul>
+			      </div>
+					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
+						<div class="feedback"><i class="icon-envelope icon-white"></i> Send us feedback!</div>
+					</a>	
 				</div>
 			</div>
+			<section class="heading-about">
+				<div class="container-fluid">
+					<h1>About</h1>
+				</div>
+			</section>
 		</header>
-		<div class="container white-background">
-		
-		<h1>Contact</h1>
-		
-		<div class="#">
-		<p>The Throw Platform is created and supported by Joseph Paul Cohen
-		<br>
-		Email: joecohen /at/ ieee.org
-		<br>
-		Website: <a href="http://josephpcohen.com">http://josephpcohen.com</a>
-		</p>
-		</div>
-		
-		<h1>License</h1>
-		
-		<div class="#">
-		
-		<p>
-		The Throw platform is released under a GPLv3 license for non-commercial use. 
-		Contact us for any questions.
-		</p>
-		
-		</div>
-		
-		
-			<h1>Publications</h1>
-				<div class="#">
-				<p><strong>2013, To Introduce Computer Science in One Day, The Throw Platform</strong><br/>
-				&nbsp;&nbsp;Cohen, Joseph Paul and Ding, Wei and Boisvert, Deborah<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;2013 IEEE Integrated STEM Education Conference (ISEC 2013), Princeton, New Jersey, USA<br/>
-
-				</p>
-			<strong>Abstract</strong>
-			<p>This paper presents an open source platform Throw
-[1] that is intended to be used for a one day event to increase
-interest in computer science as well as equip students with tools
-for self exploration. It is based on three years of hosting a one
-day event aimed at introducing computer science to 5-8th grade
-students. One major challenge in computer science education is
-fostering a commitment to learn, that is powerful and engaging
-enough for a student to be able to utilize learned skills to turn
-their ideas into reality and drive them to pursue computing.
-We present a theory for what is necessary for an effective
-introduction to computer science as well as present survey results
-from the ﬁrst trial of the Throw platform which encompasses this
-theory.</p>
-</div>
-				<a href="http://josephpcohen.com/papers/throw.pdf" target="_blank"><img src="https://lh6.ggpht.com/CKxZGZRmJZcj47qKWc66BQxJNx4kqT1pzhE_dlNxj2SaeWW1zDymnR8DfYtv4dc4DQ=w124" width="50px" height="50px"/></a>			
-		<p></p>
-		</div>
-		<footer>
+		<article class="container-create">
+			<div class="section-break">
+				<h2>License</h2>
+				<p>The Throw platform is released under a GPLv3 license for non-commercial use. 
+				Contact us for any questions.</p>
+			</div>
+			<div class="section-break">
+				<h2>Publications</h2>
+				<h3>2013, To Introduce Computer Science in One Day, The Throw Platform</h3>
+				<p>&nbsp;&nbsp;Cohen, Joseph Paul and Ding, Wei and Boisvert, Deborah<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;2013 IEEE Integrated STEM Education Conference (ISEC 2013), Princeton, New Jersey, USA</p>
+			</div>
+			<div class="section-break">
+				<h3>Abstract</h3>
+				<p>This paper presents an open source platform Throw [1] that is intended to be used for a one day event to increase interest in computer science as well as equip students with tools for self exploration. It is based on three years of hosting a one day event aimed at introducing computer science to 5-8th grade students. One major challenge in computer science education is fostering a commitment to learn, that is powerful and engaging enough for a student to be able to utilize learned skills to turn their ideas into reality and drive them to pursue computing. We present a theory for what is necessary for an effective introduction to computer science as well as present survey results from the ﬁrst trial of the Throw platform which encompasses this theory.</p>
+				<a href="http://josephpcohen.com/papers/throw.pdf" target="_blank"><img src="https://lh6.ggpht.com/CKxZGZRmJZcj47qKWc66BQxJNx4kqT1pzhE_dlNxj2SaeWW1zDymnR8DfYtv4dc4DQ=w124" width="50px" height="50px"/></a>
+			</div>
+		</article>
+		<footer class="footer-container">
+			<div class="container-fluid row-fluid">
+				<div class="span6">
+					footer content
+				</div>
+				<div class="span6">
+					footer content
+				</div>
+			</div>
 			<script src="js/jquery-1.7.min.js"></script>
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
-			<script type="text/javascript">
-			
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-39145283-1']);
-			_gaq.push(['_trackPageview']);
-			
-			(function() {
-			  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-			
-			</script>
+			<script src="js/jquery.main.js"></script>
 		</footer>
-		
 	</body>
 </html>
