--- a/getting-started.html
+++ b/getting-started.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,40 +9,54 @@
 		<meta name="description" content="Throw Platform is a learning tool to engage students in learning more about computer science">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	
 	<body>
-	
-		<!--[if lt IE 7]>
-			<p class="alert">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/">activate Google Chrome Frame</a> to improve your experience.</p>
-		<![endif]-->
-		
 		<header>
 			<div class="navbar navbar-inverse">
 				<div class="navbar-inner navbar-fixed-top">
-					<a class="brand" href="index.html">Throw Platform</a>
-					<ul class="nav">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="getting-started.html">Getting Started</a></li>
-						<li><a href="tutorial.html" class="active">Tutorial</a></li>
-						<li><a href="showcase.html">Showcase</a></li>
-					</ul>
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </a>
+			      <!-- Be sure to leave the brand out there if you want it shown -->
+			      <a class="brand" href="index.html">Throw Platform</a>
+			 
+			      <!-- Everything you want hidden at 940px or less, place within here -->
+			      <div class="nav-collapse collapse">
+			       		<ul class="nav">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li class="active"><a href="getting-started.html">Create</a></li>
+							<li><a href="basics.html" class="active">Tutorial</a></li>
+							<li><a href="showcase.html">Showcase</a></li>
+						</ul>
+			      </div>
+					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
+						<div class="feedback"><i class="icon-envelope icon-white"></i> Send us feedback!</div>
+					</a>				
 				</div>
 			</div>
+			<section class="heading-getting-started">
+				<div class="container-fluid">
+					<h1>Getting Started</h1>
+				</div>
+			</section>
 		</header>
-		<div class="container white-background">
-			<h1>Getting Started<small> How to fork the project on Github</small></h1>
+		<article class="container-create">
+			<div class="section-break">
+				<h1>Getting Started<small> How to fork the project on Github</small></h1>
 			<blockquote>GitHub is the best place to share code with friends, co-workers, classmates, and complete strangers. Over three million people use GitHub to build amazing things together.
 			<cite>-Github.com</cite></blockquote>
 			<a href="http://github.com/" target="_blank"><img src="img/step-1.jpg" class="thumbnail"/></a>
 			<p>Github is a great way to share your code.  With its huge network, the possibilities are limitless.  The first step is to create and setup your profile.</p>
 			<p></p>
-			<img src="img/step-2.jpg" class="thumbnail"/>
+						<center><a href="https://github.com/" target="_blank"><button class="btn btn-large btn-success">Go to github.com</button></a></center>
 			<p>In order to fork our project you need to verify your email address.  They should automatically send it to you.  If you do not see it in your email then go to account settings (middle image above on top right corner of github's website).  Click emails on the left hand side of the screen.  This screen will tell you whether or not your email has been verified by github. </p>
 			<p>After your email has been verified, it is now time to fork the throw-platform project on Github.  Forking the project will create a repository of the project and enable you to edit and create to your hearts desire. </p>
 <p></p>
@@ -53,25 +68,21 @@
 			
 				<h3>&lt;username>/&lt;username>.github.com</h3>
 			<p>Visit the URL and get started!</p>
-		</div>
-		<footer>
+			</div>
+		</article>
+		<footer class="footer-container">
+			<div class="container-fluid row-fluid">
+				<div class="span6">
+					footer content
+				</div>
+				<div class="span6">
+					footer content
+				</div>
+			</div>
 			<script src="js/jquery-1.7.min.js"></script>
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
-			<script type="text/javascript">
-			
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-39145283-1']);
-			_gaq.push(['_trackPageview']);
-			
-			(function() {
-			  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-			
-			</script>
+			<script src="js/jquery.main.js"></script>
 		</footer>
-		
 	</body>
 </html>
