--- a/index.html
+++ b/index.html
@@ -8,66 +8,76 @@
 		<meta name="description" content="Throw Platform is a learning tool to engage students in learning more about computer science">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	
-	<body>
-	
-		<!--[if lt IE 7]>
-			<p class="alert">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/">activate Google Chrome Frame</a> to improve your experience.</p>
-		<![endif]-->
-		
+	<body class="sky">
 		<header>
 			<div class="navbar navbar-inverse">
 				<div class="navbar-inner navbar-fixed-top">
-					<a class="brand" href="#">Throw Platform</a>
-					<ul class="nav">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="getting-started.html">Getting Started</a></li>
-						<li><a href="tutorial.html" class="active">Tutorial</a></li>
-						<li><a href="showcase.html">Showcase</a></li>
-					</ul>
+				  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </a>
+			      <!-- Be sure to leave the brand out there if you want it shown -->
+			      <a class="brand" href="index.html">Throw Platform</a>
+			 
+			      <!-- Everything you want hidden at 940px or less, place within here -->
+			      <div class="nav-collapse collapse">
+			       		<ul class="nav">
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="getting-started.html">Create</a></li>
+							<li><a href="basics.html" class="active">Tutorial</a></li>
+							<li><a href="showcase.html">Showcase</a></li>
+						</ul>
+			      </div>
+					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
+						<div class="feedback"><i class="icon-envelope icon-white"></i> Send us feedback!</div>
+					</a>
 			</div>
 		</header>
 		
-		<div class="row-fluid">
-			<div class="box span6 grav">
-				<div class="box-inner"><h1><a href="about.html">About</a></h1></div>
+		
+
+ 
+
+		
+		
+		
+		<section class="heading-index">
+			<div class="container-fluid">
+				<h1>Learn, Create &amp; Share</h1>
+					<p>Use the Tutorial section of this site to learn the basics of a building a Throw creation. After learning the basics use the Create section to get a web URL you can share.</p>
+					<!--<a href="#" class="btn btn-large btn-primary">Getting Started</a> | <a href="#" class="btn btn-large btn-primary">Getting Started</a> | <a href="#" class="btn btn-large btn-primary">Getting Started</a>-->
 			</div>
-			<div class="box span6 grav"><div class="box-inner"><h1><a href="getting-started.html">Getting Started</a></h1></div></div>
+		</section>
+		<div class="container">
+		
+			
+				<div class="column-well grav">
+					<p>Instant Graphical Feedback</p>
+					<img src="img/boat.png"/>
+				</div>
+				<div class="column-well grav">
+					<p>Collaboration Ability</p>
+					<img src="img/boat.png"/>
+				</div>
+				<div class="column-well grav">
+					<p>Industry Applicability</p>
+					<img src="img/boat.png"/>
+				</div>
+				
+			
 		</div>
-		<div class="row-fluid">
-			<div class="box span6 grav"><div class="box-inner"><h1><a href="tutorial.html" >Tutorial</a></h1></div></div>
-			<div class="box span6 grav"><div class="box-inner"><h1><a href="showcase.html">Showcase</a></h1></div></div>
-		</div>
-<!--
-		<div class="one shape grav">
-			<div class="shape-inner">Getting Started</div>
-		</div>
-		<div class="two shape grav">
-			<div class="shape-inner">Tutorial</div>
-		</div>
-		<div class="three shape grav">
-			<div class="shape-inner">Showcase</div>
-		</div>
-		<div class="env">
-			<div class="random-shape grav"></div>
-		</div>
-		-->
-		<!--
-		<div class="pOne solid"></div>
-		<div class="pWall solid"></div>
-		<div class="pTwo solid" id="high"></div>
-		<div class="pTwo-WallOne solid"></div>
-		<div class="pTwo-WallTwo solid"></div>
-		<div class="pThree solid" id="low"></div>
-		<div class="pThree-wallOne solid"></div>
-		<div class="pThree-wallTwo solid"></div>
-		<div class="scoreboard"></div>-->
+		<div class="waves solid"></div>
+
+
+
 		<footer>
 			<script src="js/jquery-1.7.min.js"></script>
 			<script src="js/bootstrap.js"></script>
@@ -88,6 +98,5 @@
 			
 			</script>
 		</footer>
-		
 	</body>
 </html>
