--- a/getting-started.html
+++ b/getting-started.html
@@ -66,18 +66,12 @@
 			<img src="img/step-3.jpg" class="thumbnail"/>
 			<p>There are a few things to do after forking throw-platform.  At your new throw-platform repository, click the settings button on the right hand side of the screen.  In the first box on the right, change your repository name to:</p>
 			
-				<h3>&lt;username>/&lt;username>.github.com</h3>
+				<h3>&lt;username>.github.com</h3>
 			<p>Visit the URL and get started!</p>
 			</div>
 		</article>
 		<footer class="footer-container">
 			<div class="container-fluid row-fluid">
-				<div class="span6">
-					footer content
-				</div>
-				<div class="span6">
-					footer content
-				</div>
 			</div>
 			<script src="js/jquery-1.7.min.js"></script>
 			<script src="js/bootstrap.js"></script>
