--- a/basics.html
+++ b/basics.html
@@ -240,8 +240,8 @@ Here we are missing a space:
 					
 					//create new iframe so we clean out any old errors
 					var iframe = $('<iframe></iframe>', {
-					      name:"output"
-					      ,id:"output"
+					      name:"outputContent"
+					      ,id:"outputContent"
 					      ,src: "base.html"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
