--- a/basics.html
+++ b/basics.html
@@ -195,7 +195,8 @@ Here we are missing a space:
 
 							</textarea>
 						</form>
-						<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>
+						<!--<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>-->
+						<div id="outputframe"></div>
 					</section>
 
 
@@ -240,17 +241,16 @@ Here we are missing a space:
 					
 					//create new iframe so we clean out any old errors
 					var iframe = $('<iframe></iframe>', {
-					      name:"outputContent"
-					      ,id:"outputContent"
-					      ,src: "base.html"
+					      name:"contentFrame"
+					      ,id:"contentFrame"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
-					$("#output").text('');
-				 	iframe.appendTo("#output");
+					$("#outputframe").text('');
+				 	iframe.appendTo("#outputframe");
 					
 				 	//get the raw element so we can append scripts
 				 	//jquery append will not allow script tags to be appended
-					v = document.getElementById('output');
+					v = document.getElementById('contentFrame');
 					v.contentWindow.document.open();
 					v.contentWindow.document.write(old);
 					v.contentWindow.document.close();
