--- a/grav.html
+++ b/grav.html
@@ -121,7 +121,8 @@
 
 							</textarea>
 						</form>
-						<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>
+						<!--<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>-->
+						<div id="outputframe"></div>
 					</section>
 
 
@@ -153,7 +154,7 @@
 			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
 			-->
 			<script type="text/javascript">
-			var old = '';
+var old = '';
 
 			function init() {
 				update();
@@ -172,17 +173,16 @@
 					
 					//create new iframe so we clean out any old errors
 					var iframe = $('<iframe></iframe>', {
-					      name:"output"
-					      ,id:"output"
-					      ,src: "base.html"
+					      name:"contentFrame"
+					      ,id:"contentFrame"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
-					$("#output").text('');
-				 	iframe.appendTo("#output");
+					$("#outputframe").text('');
+				 	iframe.appendTo("#outputframe");
 					
 				 	//get the raw element so we can append scripts
 				 	//jquery append will not allow script tags to be appended
-					v = document.getElementById('output');
+					v = document.getElementById('contentFrame');
 					v.contentWindow.document.open();
 					v.contentWindow.document.write(old);
 					v.contentWindow.document.close();
