--- a/images.html
+++ b/images.html
@@ -118,7 +118,7 @@ To add gravity we need to <code data-language="html">grav</code> tag.
 
 							</textarea>
 						</form>
-						<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>
+						<!--<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>-->
 					</section>
 
 
@@ -162,17 +162,16 @@ To add gravity we need to <code data-language="html">grav</code> tag.
 					
 					//create new iframe so we clean out any old errors
 					var iframe = $('<iframe></iframe>', {
-					      name:"output"
-					      ,id:"output"
-					      ,src: "base.html"
+					      name:"contentFrame"
+					      ,id:"contentFrame"
 					  });
 					iframe.css("height", "100%").css("width", "100%");
-					$("#output").text('');
-				 	iframe.appendTo("#output");
+					$("#outputframe").text('');
+				 	iframe.appendTo("#outputframe");
 					
 				 	//get the raw element so we can append scripts
 				 	//jquery append will not allow script tags to be appended
-					v = document.getElementById('output');
+					v = document.getElementById('contentFrame');
 					v.contentWindow.document.open();
 					v.contentWindow.document.write(old);
 					v.contentWindow.document.close();
