--- a/images.html
+++ b/images.html
@@ -119,6 +119,7 @@ To add gravity we need to <code data-language="html">grav</code> tag.
 							</textarea>
 						</form>
 						<!--<iframe name="output" class="output" id="output" style="width: 100%;"></iframe>-->
+						<div id="outputframe"></div>
 					</section>
 
 
