--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							<li><a href="getting-started.html">Create</a></li>
 							<li><a href="basics.html" class="active">Tutorial</a></li>
 							<li><a href="showcase.html">Showcase</a></li>
+							<li><a href="http://josephpcohen.com/give/" target="_blank"><button class="btn btn-danger">Support</button></a></li>
 						</ul>
 			      </div>
 					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
