--- a/getting-started.html
+++ b/getting-started.html
@@ -60,7 +60,7 @@
 			<p>In order to fork our project you need to verify your email address.  They should automatically send it to you.  If you do not see it in your email then go to account settings (middle image above on top right corner of github's website).  Click emails on the left hand side of the screen.  This screen will tell you whether or not your email has been verified by github. </p>
 			<p>After your email has been verified, it is now time to fork the throw-platform project on Github.  Forking the project will create a repository of the project and enable you to edit and create to your hearts desire. </p>
 <p></p>
-			<center><a href="https://github.com/throw-platform/throw-platform.github.com" target="_blank"><button class="btn btn-large btn-success">Fork Throw Platform</button></a></center>
+			<center><a href="https://github.com/throw-platform/throw-platform.github.com" target="_blank"><button class="btn btn-large btn-success">Go here to fork the Throw Platform</button></a></center>
 <p></p>
 			<p>Clicking the link above will bring you to the project page.  It is now time for you to fork your project and get coding!  In the top right hand corner of the project screen click fork.</p>
 			<img src="img/step-3.jpg" class="thumbnail"/>
