changed getting started

--- a/getting-started.html
+++ b/getting-started.html
@@ -64,11 +64,24 @@
 <p></p>
 			<p>Clicking the link above will bring you to the project page.  It is now time for you to fork your project and get coding!  In the top right hand corner of the project screen click fork.</p>
 			<img src="img/step-3.jpg" class="thumbnail"/>
-			<p>There are a few things to do after forking throw-platform.  At your new throw-platform repository, click the settings button on the right hand side of the screen.  In the first box on the right, change your repository name to:</p>
+			<p>There are a few things to do after forking throw-platform.  At your new throw-platform repository, click the settings button on the right hand side of the screen.  
+
+<img src="img/rename-repo.png" class="thumbnail"/>
+
+In the first box on the right, change your repository name to:</p>
+
+
 			
 				<h3>username.github.com</h3>
-			<p>Visit the URL and get started!</p>
-			</div>
+			<p>Visit the URL and get started! (It may take a few minutes before it works)</p>
+
+<p>Now find <i>index.htm</i> and click the edit button to modify it. Your changes will be shown at the URL above.</p>
+			
+<img src="img/rename-repo.png" class="thumbnail"/>
+
+
+
+</div>
 		</article>
 		<footer class="footer-container">
 			<div class="container-fluid row-fluid">
