--- a/getting-started.html
+++ b/getting-started.html
@@ -77,7 +77,7 @@ In the first box on the right, change your repository name to:</p>
 
 <p>Now find <i>index.htm</i> and click the edit button to modify it. Your changes will be shown at the URL above.</p>
 			
-<img src="img/rename-repo.png" class="thumbnail"/>
+<img src="img/edit-index.png" class="thumbnail"/>
 
 
 
