--- a/basics.html
+++ b/basics.html
@@ -35,6 +35,7 @@
 							<li><a href="getting-started.html">Create</a></li>
 							<li class="active"><a href="basics.html">Tutorial</a></li>
 							<li><a href="showcase.html">Showcase</a></li>
+							<li class="nav-button"><a href="http://josephpcohen.com/give/?throwhomepage" target="_blank"><button class="btn btn-danger">Support</button></a></li>
 						</ul>
 			      </div>
 					<a href="https://docs.google.com/spreadsheet/viewform?formkey=dEI2bm5KR3U1RVVUWWpneTBLRkE2UFE6MQ">
