--- a/extra.html
+++ b/extra.html
@@ -35,6 +35,7 @@
 							<li><a href="getting-started.html">Create</a></li>
 							<li class="active"><a href="grav.html">Tutorial</a></li>
 							<li><a href="showcase.html">Showcase</a></li>
+							<li class="nav-button"><a href="http://josephpcohen.com/give/?throwhomepage" target="_blank"><button class="btn btn-danger">Support</button></a></li>
 						</ul>
 			      </div>
 					<a href="mailto:email@email.com\">
