--- a/about.html
+++ b/about.html
@@ -66,6 +66,10 @@
 				<p>This paper presents an open source platform Throw [1] that is intended to be used for a one day event to increase interest in computer science as well as equip students with tools for self exploration. It is based on three years of hosting a one day event aimed at introducing computer science to 5-8th grade students. One major challenge in computer science education is fostering a commitment to learn, that is powerful and engaging enough for a student to be able to utilize learned skills to turn their ideas into reality and drive them to pursue computing. We present a theory for what is necessary for an effective introduction to computer science as well as present survey results from the ﬁrst trial of the Throw platform which encompasses this theory.</p>
 				<a href="http://josephpcohen.com/papers/throw.pdf" target="_blank"><img src="https://lh6.ggpht.com/CKxZGZRmJZcj47qKWc66BQxJNx4kqT1pzhE_dlNxj2SaeWW1zDymnR8DfYtv4dc4DQ=w124" width="50px" height="50px"/></a>
 			</div>
+			<div class="section-break">
+				<h3>Individuals Involved</h3>
+				<p>Joseph Paul Cohen, <a href="http://matthewciampadesign.com/">Matthew Ciampa</a>, Wei Ding, Deborah Boisvert</p>
+			</div>
 		</article>
 		<footer class="footer-container">
 			<div class="container-fluid row-fluid">
