--- a/showcase.html
+++ b/showcase.html
@@ -51,14 +51,35 @@
 		</header>
 		<article class="container">
 
+			<div class="alert alert-warning" role="alert"><center>Note: You may need to adjust the zoom of your browser and then refresh the page when viewing examples</center></div>
+
 			<ul class="thumbnails">
-				<li class="span4"><a href="http://medhanitgrace.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt=""></a></li>
+			
+			<li class="span4"><a href="http://jsbin.com/vojuzu" class="thumbnail"><img src="showcase/vojuzu.png-thumb.png" alt="">CS PINBALL by Jeffery Lai</a></li>			
+			<li class="span4"><a href="http://jsbin.com/cacem/" class="thumbnail"><img src="showcase/cacem.png-thumb.png" alt="">TILT by Tony Chin</a></li>
+			<li class="span4"><a href="http://jsbin.com/zuzugu" class="thumbnail"><img src="showcase/zuzugu.png-thumb.png" alt="">Falling Stars by Zhichao (Jay) Liu</a></li>
+			<li class="span4"><a href="http://jsbin.com/pekeyi" class="thumbnail"><img src="showcase/pekeyi.png-thumb.png" alt="">Snowball Fight by Matt Brittan</a></li>
+			<li class="span4"><a href="http://jsbin.com/wuneqo" class="thumbnail"><img src="showcase/wuneqo.png-thumb.png" alt="">Football by Kevin Phan</a></li>
+			<li class="span4"><a href="http://jsbin.com/yahoxu" class="thumbnail"><img src="showcase/yahoxu.png-thumb.png" alt="">Soccer by John Saad</a></li>
+			
+			<li class="span4"><a href="http://jsbin.com/bumeni" class="thumbnail"><img src="showcase/bumeni.png-thumb.png" alt="">Basketball by Charlie Phan</a></li>
+			<li class="span4"><a href="http://jsbin.com/zijafe" class="thumbnail"><img src="showcase/zijafe.png-thumb.png" alt="">Basketball by Shamir Tazoa</a></li>
+
+	
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt="">Throw-Money Example by Joseph Paul Cohen</a></li>
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt="">Throw Birds Example by Joseph Paul Cohen</a></li>
+				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt="">Nokia Example by Joseph Paul Cohen</a></li>
+			
+			
+			
+			
+			
+			
+			
+				<li class="span4"><a href="http://medhanitgrace.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/1.png-thumb.png" alt="">Harry Potter</a></li>
 				<li class="span4"><a href="http://nessaxo.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/2.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://j3nniferandn1ki.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/3.png-thumb.png" alt=""></a></li>
 				<li class="span4"><a href="http://rachelobrien.github.io/throw-cellphone.htm" class="thumbnail"><img src="showcase/4.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-money.htm" class="thumbnail"><img src="showcase/5.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-basket.htm" class="thumbnail"><img src="showcase/6.png-thumb.png" alt=""></a></li>
-				<li class="span4"><a href="http://throw-homepage.github.io/examples/throw-cellphone.htm" class="thumbnail"><img src="showcase/7.png-thumb.png" alt=""></a></li>
 			
 			<li class="span4"><a href="http://andrew92.github.io" class="thumbnail"><img src="showcase/andrew92.github.io.png-thumb.png" alt=""></a></li>
 			<li class="span4"><a href="http://deepakkarki2402.github.io" class="thumbnail"><img src="showcase/deepakkarki2402.github.io.png-thumb.png" alt=""></a></li>
@@ -67,6 +88,8 @@
 			<li class="span4"><a href="http://mtam-cs105.github.io" class="thumbnail"><img src="showcase/mtam-cs105.github.io.png-thumb.png" alt=""></a></li>
 			<li class="span4"><a href="http://naruhina17.github.io" class="thumbnail"><img src="showcase/naruhina17.github.io.png-thumb.png" alt=""></a></li>
 			<li class="span4"><a href="http://raytrav.github.io" class="thumbnail"><img src="showcase/raytrav.github.io.png-thumb.png" alt=""></a></li>
+			
+		
 			
 			
 			</ul>
