--- a/basics.html
+++ b/basics.html
@@ -172,7 +172,7 @@ Here we are missing a space:
 <span class="grav" style="background-color:red; font-size:30pt;">W</span>
 </center>
 
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
 
 
 
