--- a/examples/throw-money.htm
+++ b/examples/throw-money.htm
@@ -29,4 +29,4 @@ Released under the GPLv3 License
 <!--
 EDIT ABOVE THIS LINE
 -->
-<script src="http://gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
