--- a/solid.html
+++ b/solid.html
@@ -62,6 +62,7 @@
 						<li><a href="align.html">Alignment</a></li>
 						<li><a href="images.html">Images</a></li>
 						<li><a href="impact.html">Impact</a></li>
+						<li><a href="background.html">Background</a></li>
 					</ul>
 				</nav>
 			</section>
@@ -74,20 +75,14 @@
 					<section class="span6">
 						<div class="tutorial-content"><h2>Solid Tag</h2>
 
-<div class="alert alert-block">
-				This is a new project. Please let us know if something is not clear
-				so we can fix it. Your comments will help us greatly!
-				</div>
+<p>The <code>solid</code> tag creates a solid object that will prevent a <code>grav</code> element moving through it. 
+Only <code>grav</code> and <code>solid</code> elements can interact with each other.</p>
 
-<p>We provided another unique identifier, solid, to help you get started.  Solid doesn't provide gravity but rather allows a div with a gravity identifier to interact.  Only divs with gravity (or solid) can interact with each other.  A grav identified div will not interact with div that does not share either of these properties.</p>
+<p>The solid tag has many uses.  It can serve as a wall or platform to help add more fun to your project.  
+It is added the same way as the grav tag by adding <code>class=</code>.
 
-<p>The solid tag has many uses.  It can serve as a wall, platform etc to help add more fun to your project.  It is added the same way as the grav tag by adding <code>class=</code>.  Keep in mind, you can string together multiple classes within <code>class=</code> separated with a space. </p>
-
-<p>To show how important and useful solid can be, remove the solid identifier on the right hand side of the screen.</p>
-
-<pre><code data-language="html">&lt; div style="background: red; width: 50%; height: 50px; position: absolute; bottom: 10%; right: 0"&gt;&lt;/div&gt;</code></pre>
-
-<p>As you can see the gravity div simply travels through the red div rather than bounces off of it.</p>
+<p>To show how important and useful solid can be, remove the solid identifier on the right hand side of the screen.
+As you can see the gravity div simply travels through the red div rather than bounces off of it.</p>
 
 
 
