--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<script src="//raw.githubusercontent.com/ieee8023/gravityscript/master/throw.js"></script>
+			<script type="text/javascript"   src="//raw.githubusercontent.com/ieee8023/gravityscript/master/throw.js"></script>
 			<script type="text/javascript">
 			
 			  var _gaq = _gaq || [];
