--- a/grav.html
+++ b/grav.html
@@ -121,7 +121,7 @@ Here we are missing a space:
 <span class="grav" style="background-color:orange;font-size:30pt;">GRAV</span>
 
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 
 							</textarea>
@@ -155,9 +155,6 @@ Here we are missing a space:
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<!--
-			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
-			-->
 			<script type="text/javascript">
 var old = '';
 
