--- a/images.html
+++ b/images.html
@@ -123,7 +123,7 @@ The URL is wrong. The URL must be something that works when you put it in a brow
 <img class="grav" src="http://throw-platform.github.com/img/turkey.png" />
 
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
  
 
 
@@ -151,9 +151,6 @@ The URL is wrong. The URL must be something that works when you put it in a brow
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<!--
-			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
-			-->
 			<script type="text/javascript">
 			var old = '';
 
