--- a/impact.html
+++ b/impact.html
@@ -119,7 +119,7 @@ object2.innerHTML = parseInt(object2.innerHTML) +1
 <span class="grav" style="background-color:cyan;font-size:30pt;">00</span>
 <span class="grav" style="background-color:green;font-size:30pt;">00</span>
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 
 
@@ -150,9 +150,6 @@ object2.innerHTML = parseInt(object2.innerHTML) +1
 			<script src="js/bootstrap.js"></script>
 			<script src="js/main.js"></script>
 			<script src="js/jquery.main.js"></script>
-			<!--
-			<script src="http://gravityscript.googlecode.com/svn/trunk/throw-dev.js"></script>
-			-->
 			<script type="text/javascript">
 			var old = '';
 
