--- a/solid.html
+++ b/solid.html
@@ -99,7 +99,7 @@ As you can see the gravity div simply travels through the red div rather than bo
 <span class="solid" style="background: red; font-size:30pt;position:absolute;bottom:0px">SOLID</span>
 </center>
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 							</textarea>
 						</form>
