--- a/basics.html
+++ b/basics.html
@@ -166,7 +166,7 @@ Here we are missing a space:
 <span class="grav" style="background-color:red; font-size:30pt;">W</span>
 </center>
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 
 							</textarea>
