--- a/background.html
+++ b/background.html
@@ -117,7 +117,7 @@ If you don't put the URL inside <i>url(URL)</i>:
 <span class="grav" style="background-color:orange;font-size:30pt;">Throw</span>
 </center>
 
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
 
 
 							</textarea>
