--- a/examples/throw-money.htm
+++ b/examples/throw-money.htm
@@ -29,4 +29,5 @@ Released under the GPLv3 License
 <!--
 EDIT ABOVE THIS LINE
 -->
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+
+<script src="//throw-homepage.github.io/throw.js"></script>
