--- a/examples/throw-basket.htm
+++ b/examples/throw-basket.htm
@@ -34,4 +34,4 @@
 <!--
 EDIT ABOVE THIS LINE
 -->
-<script src="//gravityscript.googlecode.com/svn/trunk/throw.js"></script>
+<script src="//throw-homepage.github.io/throw.js"></script>
