--- a/showcase.html
+++ b/showcase.html
@@ -56,11 +56,11 @@
 			<ul class="thumbnails">
 			
 			
-<li class="span4"><a href="http://jsbin.com/kefuxivema/1/edit?output" class="thumbnail"><img src="showcase/kefuxivema.png-thumb.png" alt="">Ping Pong (2015)</a></li>						
+<li class="span4"><a href="https://output.jsbin.com/finexusule" class="thumbnail"><img src="showcase/kefuxivema.png-thumb.png" alt="">Ping Pong (2015)</a></li>						
 			
-<li class="span4"><a href="http://jsbin.com/hapasikivi/1/edit?output" class="thumbnail"><img src="showcase/hapasikivi.png-thumb.png" alt="">Basketball (2015)</a></li>				
+<li class="span4"><a href="https://output.jsbin.com/leyigisoxu/1" class="thumbnail"><img src="showcase/hapasikivi.png-thumb.png" alt="">Basketball (2015)</a></li>				
 			
-<li class="span4"><a href="http://jsbin.com/quworaxexa/1/edit?output" class="thumbnail"><img src="showcase/quworaxexa.png-thumb.png" alt="">Raining Cats and Dogs (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/nukunuv/1" class="thumbnail"><img src="showcase/quworaxexa.png-thumb.png" alt="">Raining Cats and Dogs (2015)</a></li>		
 
 
 
