--- a/showcase.html
+++ b/showcase.html
@@ -64,11 +64,11 @@
 
 
 
-<li class="span4"><a href="http://jsbin.com/borazuwime/1/edit?output" class="thumbnail"><img src="showcase/borazuwime.png-thumb.png" alt="">Minions (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/vomagug" class="thumbnail"><img src="showcase/borazuwime.png-thumb.png" alt="">Minions (2015)</a></li>		
 
-<li class="span4"><a href="http://jsbin.com/vuredaluwo/1/edit?output" class="thumbnail"><img src="showcase/vuredaluwo.png-thumb.png" alt="">Superman saves the Unicorns (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/niyiyil/1" class="thumbnail"><img src="showcase/vuredaluwo.png-thumb.png" alt="">Superman saves the Unicorns (2015)</a></li>		
 
-<li class="span4"><a href="http://jsbin.com/gimumirogi/1/edit?output" class="thumbnail"><img src="showcase/gimumirogi.png-thumb.png" alt="">Save Earth from Aliens (2015)</a></li>		
+<li class="span4"><a href="https://output.jsbin.com/xemipos/1" class="thumbnail"><img src="showcase/gimumirogi.png-thumb.png" alt="">Save Earth from Aliens (2015)</a></li>		
 
 		
 			
